implement burger builder

--- a/burger-builder/src/components/Burger/BuildControls/BuildControls.module.scss
+++ b/burger-builder/src/components/Burger/BuildControls/BuildControls.module.scss
@@ -1,7 +1,7 @@
 @import "../../../shared/scss/foundation";
 
 .BuildControls {
-  background-color: bc("bread");
+  background-color: #c98428;
 
   margin-top: space(2);
   padding: space(1) 0;
