implement form and form validation

--- a/burger-builder/src/components/UI/Button/Button.module.scss
+++ b/burger-builder/src/components/UI/Button/Button.module.scss
@@ -12,7 +12,7 @@
   }
 
   &:disabled {
-    background-color: gainsboro;
+    background-color: gainsboro !important;
     cursor: not-allowed;
   }
 
