--- a/axios-exercise/src/index.css
+++ b/axios-exercise/src/index.css
@@ -14,3 +14,8 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
