--- a/redux-exercise/src/components/AddPerson/AddPerson.module.css
+++ b/redux-exercise/src/components/AddPerson/AddPerson.module.css
@@ -15,3 +15,14 @@
 
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
+
+.AddPerson input {
+  margin-right: 15px;
+
+  border: none;
+  outline: none;
+
+  background-color: whitesmoke;
+
+  padding: 10px 20px;
+}
